	
2009-24-June  Francesco Nori <francesco.nori@iit.t>
* Current build 24. iron: integral discretization problem removed
	
2009-24-June  Francesco Nori <francesco.nori@iit.t>
* Current build 25. iron: DEBUG_ANA_INC can now be used to print out the incremental encoder readings (a can_print message diplays the incremental encoders positions every second)
	
	
2010-26-February  Maggiali Marco <marco.maggiali@iit.t>
* Current build 26. maggia: now from the calibration file it is passed the current limit in mA. 

2010-20-April Francesco Nori <francesco.nori@iit.t>
* Current build 27. Timeout on velocity control in case messages are not received within 100ms.

2010-20-April Francesco Nori <francesco.nori@iit.t>
* Current build 28. Timeout on velocity can be set by CAN message. Joint is not disabled but switches to POSITION control.

2010-03-May  Maggiali Marco <marco.maggiali@iit.t>
* Current build 29. maggia: added a I2T filter for the current. Build number 29

2010-03-May  Maggiali Marco <marco.maggiali@iit.t>
* Current build 30. maggia: BUILD NUMBER 30. TO BE TESTED. The target 1.28 and 1.30 do not enable the MAIS board. 
In the struct canmsg_tag I have changed the CAN_data[16] in CAN_data[8]. I do not know why it was 16, since the data of a CAN message are at maximum 8.  

2010-11-May  Francesco Nori <iron@liralab.it>
* Current build 31. _vel_timeout is now passed via CAN on a separate message

2010-12-May  Maggiali Marco <marco.maggiali@iit.t>
* Current build 32. Added the target 1.29 for iCubV2 

2010-11-May  Francesco Nori <iron@liralab.it>
* Current build 33. I2T removed for 0x0119 (wrist control board)

2010-27-Jul  Marco Randazzo <marco.randazzo@iit.it>
* Current build 34. control_mode[] is now broadcasted every time a change in modality is detected. see void can_send_broadcast(void)

2010-17-Ago Marco Randazzo <marco.randazzo@iit.it>
* Current build 35. Added torque/impedance control for firmware version 0x0119 (forearm pronosupination) 